fix brochure padding & align developer items

--- a/src/scss/projects/components/popups/brochure.scss
+++ b/src/scss/projects/components/popups/brochure.scss
@@ -70,6 +70,7 @@
     }
     @media (max-width: 768px) {
       gap: 0;
+      padding: 0;
     }
   }
   &__top {
