--- a/src/scss/projects/components/popups/developer.scss
+++ b/src/scss/projects/components/popups/developer.scss
@@ -60,6 +60,7 @@
     @media (max-width: 992px) {
       margin-top: 32px;
       margin-bottom: 32px;
+      align-self: centers;
     }
     @media (max-width: 768px) {
       grid-template-columns: repeat(2, max-content);
